--- a/src/main/resources/templates/loginForm.html
+++ b/src/main/resources/templates/loginForm.html
@@ -19,12 +19,16 @@ which is used to store and handle the user input.  -->
     <label for="username" class="form-label">Username</label>
     <input th:field="*{username}" type="text" class="form-control" id="username" aria-describedby="usernamehelp">
     <div id="usernamehelp" class="form-text">We'll never share your email with anyone else.</div>
+  	<p class="alert alert-danger" th:if="${#fields.hasErrors('username')}" 
+  	th:errors="*{username}">Username error</p>
   </div>
   <div class="mb-3">
     <label for="password" class="form-label">Password</label>
     <input th:field="*{password}" type="text" class="form-control" id="password">
   </div>
-  
+  <p class="alert alert-danger" th:if="${#fields.hasErrors('password')}" 
+  	th:errors="*{password}">Password error</p>
+  	
   <button type="submit" class="btn btn-primary">Login</button>
 </form>
  </div> 
