--- a/src/main/resources/templates/loginForm.html
+++ b/src/main/resources/templates/loginForm.html
@@ -1,19 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <title>My First Webpage</title>
-    
-    <link href="/css/bootstrap.min.css" rel="stylesheet"> 
-    
-  </head>
-
+<html layout:decorate="layouts/defaultLayout">
+ 
 
 <!-- POST request to the processLogin endpoint when submitted. The form will be associated 
 with a server-side model object called loginModel, 
 which is used to store and handle the user input.  -->
+  
+  <!-- Anyting from this  div with layout fragment content will be put in the default layout-->
   <body>
-<div class="container my-5">  <!--my  spacing/margin -->
+<div class="container my-5" layout:fragment="content">  <!--my  spacing/margin -->
 	 <form action="#" method="post" th:action="@{processLogin}" th:object="${loginModel}" >
   <div class="mb-3">
     <label for="username" class="form-label">Username</label>
