--- a/src/main/resources/templates/loginResults.html
+++ b/src/main/resources/templates/loginResults.html
@@ -1,18 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <title>My First Webpage</title>
-    
-    <link href="/css/bootstrap.min.css" rel="stylesheet"> 
-    
-  </head>
-
-
+<html layout:decorate="layouts/defaultLayout">
+ 
 
   <body>
 	<!-- *{username}  ==   loginModel.username  -->
-	<div class="container" th:object="${loginModel}">
+	<div class="container" th:object="${loginModel}" layout:fragment="content">
 		<p>Username: <span th:text="*{username}"> </span></p>
 		<p>Password: <span th:text="*{password}"> </p>
 	</div>
