--- a/src/main/resources/templates/layouts/defaultLayout.html
+++ b/src/main/resources/templates/layouts/defaultLayout.html
@@ -18,6 +18,7 @@
 	  
 <!--footer -->  
 	<div th:replace="layouts/commonFooter :: footer">My footer will go here.</div>  
+    <script src="/js/bootstrap.bundle.js"></script>
   </body>
   
   </html>
