--- a/src/main/resources/templates/layouts/commonHeader.html
+++ b/src/main/resources/templates/layouts/commonHeader.html
@@ -23,7 +23,7 @@
         <a class="nav-link" href="/orders/admin">Admin</a>
       </li>
        <li sec:authorize="!isAuthenticated()" class="nav-item">
-        <a class="nav-link" href="/login/">Login</a>
+        <a class="nav-link" href="/login">Login</a>
       </li>
        <li sec:authorize="isAuthenticated()" class="nav-item">
 		<!--Logout only works with a post request, so we need a form submit instead
