--- a/src/main/resources/templates/layouts/commonHeader.html
+++ b/src/main/resources/templates/layouts/commonHeader.html
@@ -1,6 +1,6 @@
 <div class="header-section" th:fragment="header"> 
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="#">Awesome Application</a>
+  <a class="navbar-brand" href="#">Orders Application</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -23,7 +23,7 @@
         <a class="nav-link" href="/orders/admin">Admin</a>
       </li>
        <li sec:authorize="!isAuthenticated()" class="nav-item">
-        <a class="nav-link" href="/login">Login</a>
+        <a class="nav-link" href="/login/">Login</a>
       </li>
        <li sec:authorize="isAuthenticated()" class="nav-item">
 		<!--Logout only works with a post request, so we need a form submit instead
