--- a/src/main/resources/templates/layouts/commonHeader.html
+++ b/src/main/resources/templates/layouts/commonHeader.html
@@ -7,8 +7,8 @@
   
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav">
-      <li class="nav-item active">
-        <a class="nav-link" href="/orders/">All <span class="sr-only">(current)</span></a>
+      <li sec:authorize="!hasRole('ADMIN')" class="nav-item active">
+        <a class="nav-link" href="/orders/">Orders <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="/orders/showSearchForm">Search</a>
