--- a/src/main/resources/templates/ordersAdmin.html
+++ b/src/main/resources/templates/ordersAdmin.html
@@ -29,7 +29,8 @@
 		 <input name="productName"type="hidden" th:value="${order.productName}">
 		 <input name="price" type="hidden" th:value="${order.price}">
 		 <input name="quantity" type="hidden"  th:value="${order.quantity}">
-		 <button class="btn btn-danger" type="submit" name="deleteItem">Delete</button>
+		 <button class="btn btn-danger" type="submit" name="deleteItem" onclick="return confirm('Are you sure you want to delete this item?');">Delete</button>
+		 
 		</form>
 	   </td>
 	   <td>
