--- a/src/main/resources/templates/layouts/defaultLayout.html
+++ b/src/main/resources/templates/layouts/defaultLayout.html
@@ -5,6 +5,7 @@
     <title>My First Webpage</title>
     
       <link href="/css/bootstrap.min.css" rel="stylesheet">
+      <link href="/css/styles.css" rel="stylesheet">
   </head>
   
   <body>
