--- a/src/main/resources/templates/layouts/commonHeader.html
+++ b/src/main/resources/templates/layouts/commonHeader.html
@@ -1,40 +1,42 @@
 <div class="header-section" th:fragment="header"> 
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="#">Orders Application</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  
-  <div class="collapse navbar-collapse" id="navbarNav">
-    <ul class="navbar-nav">
-      <li  class="nav-item active">
-        <a class="nav-link" href="/orders/">Orders <span class="sr-only">(current)</span></a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="/orders/showSearchForm">Search</a>
-      </li>
-       <li class="nav-item">
-        <a class="nav-link" href="/orders/spa">S.P.A</a>
-      </li>
-      <li sec:authorize="hasAnyRole('ADMIN', 'MANAGER')" class="nav-item">
-        <a class="nav-link" href="/orders/showNewOrderForm">Add</a>
-      </li>
-   
-       <li sec:authorize="!isAuthenticated()" class="nav-item">
-        <a class="nav-link" href="/login/">Login</a>
-      </li>
-       <li sec:authorize="isAuthenticated()" class="nav-item">
-		<!--Logout only works with a post request, so we need a form submit instead
-		of a href link like the others -->   
-        <form action="#" th:action="@{/logout}" method="post">
-			<input type="submit" value="Logout" />	
-		</form>
-      </li>
-       <li sec:authorize="isAuthenticated()">
-        <a class="nav-link" href="#">welcome <span th:text="${#authentication.name}"></span></a>
-      </li>
-    </ul>
-  </div>
-  
-</nav>
+  <nav class="navbar navbar-expand-lg navbar-light bg-light flex-container">
+    <a class="navbar-brand" href="#">Orders Application</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav">
+        <li class="nav-item active">
+          <a class="nav-link" href="/orders/">Orders <span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/orders/showSearchForm">Search</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/orders/spa">S.P.A</a>
+        </li>
+        <li sec:authorize="hasAnyRole('ADMIN', 'MANAGER')" class="nav-item">
+          <a class="nav-link" href="/orders/showNewOrderForm">Add</a>
+        </li>
+
+        <li sec:authorize="!isAuthenticated()" class="nav-item">
+          <a class="nav-link" href="/login/">Login</a>
+        </li>
+      </ul>
+      <ul class="navbar-nav float-right">
+        <li sec:authorize="isAuthenticated()" class="nav-item">
+          <!-- Logout only works with a post request, so we need a form submit instead
+		  of a href link like the others -->   
+          <form action="#" th:action="@{/logout}" method="post">
+            <input class="log" type="submit" value="Logout" />	
+          </form>
+        </li>
+        <li sec:authorize="isAuthenticated()">
+          <a class="nav-link" href="#">welcome <span th:text="${#authentication.name}"></span></a>
+        </li>
+      </ul>
+    </div>
+
+  </nav>
 </div>
