--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -18,3 +18,12 @@
 form {
   padding-top: 5px;
 }
+
+.searchBox{
+	display: flex;
+	justify-content:center;
+	margin-bottom: 15px;
+	margin-top: 15px;
+	padding: 5px;
+	background-color:cornflowerblue;
+}
