--- a/src/main/resources/templates/orders.html
+++ b/src/main/resources/templates/orders.html
@@ -7,6 +7,17 @@
 
       -->
   <div layout:fragment="content">
+	  
+	  <div class="searchBox">   
+			<form th:action="@{/orders/search}" method="post">
+ <input type="text" name="theSearchName" />
+  <input type="submit" value="Search" class="add-button"/>
+  (Search Blank to get all orders.)
+</form>
+
+	  </div>
+	
+	 
     <h2 th:text="${title}"></h2>
     <table class="table table-striped">
       <thead>
