--- a/src/main/resources/templates/searchForm.html
+++ b/src/main/resources/templates/searchForm.html
@@ -8,7 +8,7 @@
   <body>
    
    <div layout:fragment="content">	
-	   <form th:action="@{/orders/search}" action="#" method="post" th:object="${searchModel}">
+	   <form th:action="@{/orders/search}" action="#" method="post" >
 	 
 	  <div class="mb-3">
 	    <label for="searchTermInput" class="form-label">Search For</label>
