--- a/src/main/resources/templates/layouts/defaultLayout.html
+++ b/src/main/resources/templates/layouts/defaultLayout.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html decorate="layouts/defaultTemplate">
+<html xmlns:th="http://www.thymeleaf.org">
   <head>
     <meta charset="UTF-8">
     <title>My First Webpage</title>
