--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -22,9 +22,9 @@ form {
 .searchBox{
 	display: flex;
 	justify-content:center;
-	margin-bottom: 15px;
-	margin-top: 15px;
-	padding: 5px;
+	margin-bottom: 1rem;
+    margin-top: 1rem;
+    padding: 0.5rem;
 	background-color:cornflowerblue;
 }
 
@@ -33,8 +33,6 @@ form {
   flex-direction: column;
   align-items: center;
 }
-
-
 
 
 
