--- a/src/main/resources/templates/orders.html
+++ b/src/main/resources/templates/orders.html
@@ -8,7 +8,9 @@
       -->
   <div layout:fragment="content">
 	  
-	  <div class="searchBox">   
+	  <div class="contentContainer"> 
+	 <div class="searchBox">
+
 		<form th:action="@{/orders/search}" method="post">
 		 <input type="text" name="theSearchName" />
 		 <input type="submit" value="Search" class="add-button"/>
@@ -16,7 +18,7 @@
 		</form>
 	  </div>
 	
-    <h2 th:text="${title}"></h2>
+    
   <div class="table-responsive-md">
     <table class="table table-striped">
       <thead>
@@ -61,6 +63,6 @@
       </tbody>
     </table>
     </div>
-   
+   </div>
   </div>
 </html>
