--- a/src/main/resources/templates/layouts/defaultLayout.html
+++ b/src/main/resources/templates/layouts/defaultLayout.html
@@ -15,18 +15,19 @@
 <div sec:authorize="isAnonymous()" th:replace="layouts/loginHeader :: header-login">My login-specific header will go here.</div>
 <div sec:authorize="isAuthenticated()" th:replace="layouts/commonHeader :: header">My default header will go here.</div>
 
-	
-	  
-<!--content -->	  
- 	<section layout:fragment="content">
-		 <p>Replace this with a page that has layout:fragment="content"</p>
-	</section>
-	
+    
+      
+<!--content -->      
+    <section layout:fragment="content">
+         <p>Replace this with a page that has layout:fragment="content"</p>
+    </section>
+    
 
-	  
+      
 <!--footer -->  
-	<div th:replace="layouts/commonFooter :: footer">My footer will go here.</div>  
-    <script src="/js/bootstrap.bundle.js"></script>
+    <div th:replace="layouts/commonFooter :: footer">My footer will go here.</div>  
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
   </body>
   
   </html>
