--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -34,5 +34,17 @@ form {
   align-items: center;
 }
 
+.fieldError {
+    color: red;
+    font-size: 0.9em;
+    margin-top: 5px;
+}
+
+.form-container {
+    max-width: 600px;
+    margin: 0 auto;
+    padding-top: 50px;
+    padding-bottom: 50px;
+}
 
 
