--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -60,4 +60,28 @@ form {
 }
 
 
+/* LoginForm Container */
+.logInClass {
+  max-width: 400px;
+  margin: 0 auto;
+  padding: 1rem;
+  background-color: #f8f9fa;
+  border-radius: 0.5rem;
+   border: 1px solid #ccc;
+ 
+}
+
+/* Demo Information */
+.demo {
+  margin-top: 2rem;
+  text-align: center;
+}
+
+.demo h3 {
+  font-size: 1.25rem;
+ 
+}
+
+
+
 
