--- a/src/main/resources/templates/layouts/commonFooter.html
+++ b/src/main/resources/templates/layouts/commonFooter.html
@@ -1,4 +1,4 @@
 <div class="footer" th:fragment="footer">
-<p class="alert alert-primary">Contact us at 555-1212. Copyright 2022</p>
 
+visi
 </div>
