--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -5,9 +5,17 @@
   min-height: 100vh;
 }
 
+
 .footer {
   margin-top: auto;
   text-align: center;
+background-color:#e3f2fd;
+padding: 10px;
+}
+
+.header-section-login{
+	background-color:#e3f2fd;
+	padding: 15px;
 }
 
 
@@ -75,6 +83,11 @@ form {
 .demo {
   margin-top: 2rem;
   text-align: center;
+
+}
+
+.demo table {
+border: 1px solid #ccc;
 }
 
 .demo h3 {
@@ -82,6 +95,9 @@ form {
  
 }
 
+.logInClass button {
 
+   width: 140px;
+}
 
 
