--- a/src/main/resources/templates/ordersSPA.html
+++ b/src/main/resources/templates/ordersSPA.html
@@ -10,9 +10,10 @@
   <body>
   <div class="container" id="main-body">
     <h2>Search</h2>
-<p>This is a single page application (SPA). </p>
-<p> will notice that there are no page refresh events. </p>
-<p>All data is handled through AJAX reqeusts to the server.</p>
+<p>This is a single page application (SPA). For learning purposes. </p>
+<p>All data is handled through AJAX requests to the server. No page refresh events.</p>
+
+
      <div id="search-form">
        <div class="mb-3">
       	 <label for="searchTerm" class="form-label">Search Term</label>
