--- a/src/main/resources/templates/ordersSPA.html
+++ b/src/main/resources/templates/ordersSPA.html
@@ -9,11 +9,14 @@
 </head>
   <body>
   <div class="container" id="main-body">
-    <h2>Search</h2>
-<p>This is a single page application (SPA). For learning purposes. </p>
+    <h2>For learning purposes</h2>
+<p>This is a single page application (SPA). </p>
 <p>All data is handled through AJAX requests to the server. No page refresh events.</p>
 
 
+<a class="btn btn-primary btn-sm" href="/orders/">Back to Orders <span class="sr-only">(current)</span></a>
+        
+       
      <div id="search-form">
        <div class="mb-3">
       	 <label for="searchTerm" class="form-label">Search Term</label>
