--- a/src/main/resources/static/css/spa.css
+++ b/src/main/resources/static/css/spa.css
@@ -1,12 +1,23 @@
 body {
 	background-color:#5386e4;
+	font-family: 'Arial', sans-serif;
 	padding:10px;
 	border:0;
 	border-radius:10px;
 }
+
+h2 {
+  font-size: 24px;
+  margin-bottom: 20px;
+  color: #4c4b63;
+}
+
+
 #results-box {
 	display: flex;
 	flex-wrap:wrap;
+	justify-content: space-between;
+    margin-bottom: 20px;
 }
 
 .single-order {
@@ -41,9 +52,15 @@ body {
 	padding:20px;
 	color:white;
 	width:50%;
+	margin-top: 10px;
 }
+
+#search-button{
+  margin-left:0px;
+}
+
 .btn {
-	margin-left:10px;
+  margin-left: 10px;
 }
 
 /* color scheme from
