--- a/src/main/resources/templates/layouts/loginHeader.html
+++ b/src/main/resources/templates/layouts/loginHeader.html
@@ -1,5 +1,7 @@
 <!-- Header fragment specific to the login page -->
 <div class="header-section-login" th:fragment="header-login">
   <!-- Add the content of the login-specific header here -->
- <a class="navbar-brand" href="#">Orders Application</a>
+ 
+Orders Management Demo App
+ 
 </div>
