--- a/src/main/resources/templates/orders.html
+++ b/src/main/resources/templates/orders.html
@@ -13,8 +13,8 @@
 
 		<form th:action="@{/orders/search}" method="post">
 		 <input type="text" name="theSearchName" />
-		 <input type="submit" value="Search" class="add-button"/>
-  (Search Blank to get all orders.)
+		 <input type="submit" value="Search Name" class="add-button"/>
+  (Blank for all orders.)
 		</form>
 	  </div>
 	
