--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -6,6 +6,7 @@
 }
 
 
+
 .footer {
   margin-top: auto;
   text-align: center;
@@ -16,6 +17,9 @@ padding: 10px;
 .header-section-login{
 	background-color:#e3f2fd;
 	padding: 15px;
+	text-align: center;
+	 font-size: 1.5rem;
+    font-weight: bold; /* Make the font bold */
 }
 
 
@@ -106,4 +110,5 @@ border: 1px solid #ccc;
   border: 1px solid #ccc;
   border-radius: 5px;
 }
+
 
