--- a/src/main/resources/templates/layouts/commonFooter.html
+++ b/src/main/resources/templates/layouts/commonFooter.html
@@ -1,4 +1,6 @@
 <div class="footer" th:fragment="footer">
 
-visi
+
+	<a href="https://github.com/elvis-visi/-Orders-Management">Code for this application</a>
+
 </div>
