--- a/src/main/resources/templates/addNewOrderForm.html
+++ b/src/main/resources/templates/addNewOrderForm.html
@@ -29,7 +29,7 @@
 		
 	<div class="mb-3">
 	  <label for="orderPriceInput" class="form-label">Order Price</label>
-	  <input th:field="*{price}" type="number" step="0.01" class="form-control" id="orderPriceInput" aria-describedby="orderPriceHelp" th:errorclass="is-invalid">
+	  <input th:field="*{price}" type="number" step="0.01" class="form-control" id="orderPriceInput" aria-describedby="orderPriceHelp" th:errorclass="is-invalid" min="0.01">
 	  <div id="orderPriceHelp" class="form-text"></div>
 	  <div class="invalid-feedback" th:if="${#fields.hasErrors('price')}" th:errors="*{price}"></div>
 	</div>
@@ -37,7 +37,7 @@
 	
 	<div class="mb-3">
 	  <label for="orderQuantityInput" class="form-label">Order Quantity</label>
-	  <input th:field="*{quantity}" type="number" class="form-control" id="orderQuantityInput" aria-describedby="orderQuantityHelp" th:errorclass="is-invalid">
+	  <input th:field="*{quantity}" type="number" class="form-control" id="orderQuantityInput" aria-describedby="orderQuantityHelp" th:errorclass="is-invalid" min="1">
 	  <div id="orderQuantityHelp" class="form-text"></div>
 	  <div class="invalid-feedback" th:if="${#fields.hasErrors('quantity')}" th:errors="*{quantity}"></div>
 	</div>
